[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mau"
version = "5.0.0"
description = "A lightweight template-driven markup language"
authors = [{name = "Leonardo Giordani", email = "giordani.leonardo@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
  "jinja2",
  "pyyaml",
  "rich"
]
readme = "README.md"

[project.urls]
Home = "https://github.com/Project-Mau/mau"

[project.optional-dependencies]
testing = [
  "nox",
  "pytest",
  "pytest-cov",
  "pytest-icdiff",
]
development = [
  "flit",
  "mypy",
  "pip",
  "pylint",
  "ruff",
  "types-PyYAML",
  "wheel",
]

[project.scripts]
mau = "mau.cli:main"

[tool.coverage.run]
source = ["mau"]
omit=[
  "mau/test_helpers.py",
]

[tool.coverage.report]
include = ["mau/*"]
exclude_lines = [
  'if TYPE_CHECKING:',
  'pragma: no cover'
]
exclude_also = [
  "def __hash__",
  "def __repr__",
  "def __str__",
]

[tool.pylint.main]
disable = []

[tool.pytest.ini_options]
addopts = """\
--cov mau \
--cov-report term-missing \
--no-cov-on-fail \
--force-short-summary \
"""

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
check_untyped_defs = true
exclude = [
"tests/.*"
]